# docs/user.swagger.json
@@ -43,39 +43,6 @@
       }
     },
     "/v1/admin": {
-      "delete": {
-        "operationId": "UserService_DeleteAdmin",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/userDeleteAdminResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "username",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          }
-        ],
-        "tags": [
-          "UserService"
-        ],
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ]
-      },
       "post": {
         "operationId": "UserService_AddAdmin",
         "responses": {
@@ -141,6 +108,114 @@
         ],
         "tags": [
           "UserService"
+        ]
+      }
+    },
+    "/v1/admin/{userId}": {
+      "delete": {
+        "operationId": "UserService_DeleteAdmin",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/userDeleteAdminResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "UserService"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/v1/admins": {
+      "get": {
+        "operationId": "UserService_GetAdmins",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/userGetAdminsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "username",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "adminScale",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "orderBy.order",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "orderBy.field",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "UserService"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
         ]
       }
     },
@@ -302,12 +377,7 @@
             "name": "orderBy.order",
             "in": "query",
             "required": false,
-            "type": "string",
-            "enum": [
-              "ASC",
-              "DESC"
-            ],
-            "default": "ASC"
+            "type": "string"
           },
           {
             "name": "orderBy.field",
@@ -320,14 +390,14 @@
             "in": "query",
             "required": false,
             "type": "string",
-            "format": "int64"
+            "format": "uint64"
           },
           {
             "name": "offset",
             "in": "query",
             "required": false,
             "type": "string",
-            "format": "int64"
+            "format": "uint64"
           }
         ],
         "tags": [
@@ -374,10 +444,58 @@
       }
     },
     "userAddAdminResponse": {
-      "type": "object"
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "adminScale": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "userAdmin": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "adminScale": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
     },
     "userDeleteAdminResponse": {
       "type": "object"
+    },
+    "userGetAdminsResponse": {
+      "type": "object",
+      "properties": {
+        "pagination": {
+          "$ref": "#/definitions/userPagination"
+        },
+        "admins": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/userAdmin"
+          }
+        }
+      }
     },
     "userGetUserResponse": {
       "type": "object",
@@ -435,7 +553,22 @@
       }
     },
     "userInitAdminResponse": {
-      "type": "object"
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string"
+        },
+        "username": {
+          "type": "string"
+        },
+        "adminScale": {
+          "type": "string"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
     },
     "userLoginRequest": {
       "type": "object",
@@ -456,19 +589,22 @@
         }
       }
     },
-    "userOrder": {
-      "type": "string",
-      "enum": [
-        "ASC",
-        "DESC"
-      ],
-      "default": "ASC"
-    },
-    "userOrderBy": {
+    "userOrderByAdmins": {
       "type": "object",
       "properties": {
         "order": {
-          "$ref": "#/definitions/userOrder"
+          "type": "string"
+        },
+        "field": {
+          "type": "string"
+        }
+      }
+    },
+    "userOrderByUsers": {
+      "type": "object",
+      "properties": {
+        "order": {
+          "type": "string"
         },
         "field": {
           "type": "string"
@@ -480,19 +616,19 @@
       "properties": {
         "pages": {
           "type": "string",
-          "format": "int64"
+          "format": "uint64"
         },
         "curPage": {
           "type": "string",
-          "format": "int64"
+          "format": "uint64"
         },
         "records": {
           "type": "string",
-          "format": "int64"
+          "format": "uint64"
         },
         "recordsPerPage": {
           "type": "string",
-          "format": "int64"
+          "format": "uint64"
         }
       }
     },
